WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185219
AX: In role=dialog elements with aria-modal=true VoiceOver iOS/macOS can't manually focus or read dialog paragraph description text inside the modal.
https://bugs.webkit.org/show_bug.cgi?id=185219
Summary
AX: In role=dialog elements with aria-modal=true VoiceOver iOS/macOS can't ma...
Paul J. Adam
Reported
2018-05-02 14:49:05 PDT
Created
attachment 339346
[details]
dialog demo page Steps to Reproduce: 1. Turn on VoiceOver on macOS or iOS latest stable public versions. 2. Visit
http://pauljadam.com/demos/dialog.html
in Safari and open the modal dialog. 3. Manually move VoiceOver screen reader focus to the <p> text "The quick brown fox jumps over the lazy dog." Actual Results: 1. VoiceOver skips over the text "The quick brown fox jumps over the lazy dog." and cannot focus on that text or read it manually. Expected Results: 1. VoiceOver focuses and reads the text "The quick brown fox jumps over the lazy dog."
Attachments
dialog demo page
(2.75 KB, text/html)
2018-05-02 14:49 PDT
,
Paul J. Adam
no flags
Details
patch
(5.32 KB, patch)
2018-05-11 10:54 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
patch
(5.32 KB, patch)
2018-05-11 11:02 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-05-02 14:49:22 PDT
<
rdar://problem/39920009
>
Nan Wang
Comment 2
2018-05-11 10:54:08 PDT
Created
attachment 340202
[details]
patch
EWS Watchlist
Comment 3
2018-05-11 10:56:34 PDT
Attachment 340202
[details]
did not pass style-queue: ERROR: Source/WebCore/accessibility/AccessibilityObject.cpp:2091: Declaration has space between type name and * in Node *node [whitespace/declaration] [3] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 4
2018-05-11 11:02:38 PDT
Created
attachment 340203
[details]
patch update style
WebKit Commit Bot
Comment 5
2018-05-11 14:58:24 PDT
Comment on
attachment 340203
[details]
patch Clearing flags on attachment: 340203 Committed
r231720
: <
https://trac.webkit.org/changeset/231720
>
WebKit Commit Bot
Comment 6
2018-05-11 14:58:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug