AX: In role=dialog elements with aria-modal=true VoiceOver iOS/macOS can't manually focus or read dialog paragraph description text inside the modal. https://bugs.webkit.org/show_bug.cgi?id=185219 <rdar://problem/39920009>

Reviewed by Chris Fleizach.

Source/WebCore:

The text node descendants of a modal dialog are ignored. Fixed it by using AccessibilityObject's
node() to determine if it's the descendant of the modal dialog node.

Test: accessibility/aria-modal-text-descendants.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isModalDescendant const):

LayoutTests:

* accessibility/aria-modal-text-descendants-expected.txt: Added.
* accessibility/aria-modal-text-descendants.html: Added.


Canonical link: https://commits.webkit.org/201050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231720 268f45cc-cd09-0410-ab3c-d52691b4dbfc